feat : ACE 점수를 구분하여 합계를 계산하는 기능 추가